--- a/primeraentregamezquida/src/components/NavBar/estilosnav.css
+++ b/primeraentregamezquida/src/components/NavBar/estilosnav.css
@@ -1,5 +1,33 @@
+/*
 .navContainer {
-    background-color: grey;
+    border: 0;
+    background-image: linear-gradient(150deg, rgb(195, 7, 237), rgb(25, 159, 248), rgb(130, 199, 228));
+    border-radius: 10px;
     color: white;
+    display: flex;
+    font-size: 22px;
+    padding: 20px;
+    transition: .3s;
 
 }
+
+.buttonNav {
+
+    background-color: black;
+    padding: 20px;
+    border-radius: 10px;
+    transition: .3s;
+    ;
+}
+
+.buttonMag:hover {
+
+    background: none;
+
+
+}
+
+.button:active {
+    transform: scale(0.9);
+
+} /*
